# GlueCompiler

./: .gitignore  .shell-commands.cson  Cargo.toml  build.bat  func.glue  return.glue  run.bat  run_c.bat  stmt_code_block.glue  test.glue
ast/: Cargo.toml
ast/src/: code_block.rs  expr.rs  func.rs  lib.rs  return_stmt.rs  stmt.rs  variable.rs
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/clif/: expr.rs  func.rs  mod.rs  stmt.rs  variable.rs
codegen_c/: Cargo.toml
codegen_c/src/: gcc.rs  lib.rs
codegen_c/src/grammar/: expr.rs  func.rs  mod.rs  stmt.rs
common/: Cargo.toml
common/src/: lib.rs
hir/: Cargo.toml
hir/src/: code_block.rs  expr.rs  func.rs  lib.rs  stmt.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token_kind.rs
parser/: Cargo.toml
parser/src/: event.rs  lib.rs  sink.rs  source.rs
parser/src/grammar/: code_block.rs  expr.rs  func.rs  mod.rs  stmt.rs
parser/src/parser/: marker.rs  mod.rs  parse_error.rs
src/: main.rs
syntax/: Cargo.toml
syntax/src/: lib.rs
