[package]
name = "rust_compiler"
version = "0.1.0"
authors = ["Luuk van Oijen <lazyluuk.channel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "lexer" }
syntax = { path = "syntax" }
parser = { path = "parser" }
ast = { path = "ast" }
hir = { path = "hir" }
codegen = { path = "codegen" }

[workspace]
members = ["lexer", "syntax", "parser", "ast", "hir", "codegen"]
