[package]
name = "codegen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }
common = { path = "../common" }

cranelift = "0.76.0"
cranelift-module = "*" #Any version that works with cranelift-object
cranelift-object = "0.76.0"

target-lexicon = "*" #Any version, as it is included by cranelift and we don't want a mismatch
