[package]
name = "codegen_c"
description = "A backend for the GlueRust compiler that targets C as its IR"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }
common = { path = "../common" }
